gccida/c0/ix86_register_move_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/i386.c:12815:31: error: must use 'enum' tag to refer to type 'machine_mode'
int  ix86_register_move_cost( machine_mode mode, reg_class class1, reg_class class2) 
                              ^
                              enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/i386.c:12815:50: error: must use 'enum' tag to refer to type 'reg_class'
int  ix86_register_move_cost( machine_mode mode, reg_class class1, reg_class class2) 
                                                 ^
                                                 enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/i386.c:12815:68: error: must use 'enum' tag to refer to type 'reg_class'
int  ix86_register_move_cost( machine_mode mode, reg_class class1, reg_class class2) 
                                                                   ^
                                                                   enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/i386.c:12826:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // [rsp+10h] [rbp-30h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/i386.c:12829:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // [rsp+20h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/i386.c:12854:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/i386.c:12855:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v18 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/i386.c:12878:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/i386.c:12879:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_register_move_cost/src/obj/i386.o] Error 1
